fix env var reference

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,7 +14,7 @@ jobs:
     env:
       TFC_TOKEN: ${{ secrets.TFC_TOKEN }}
       TFC_ORG: ${{ secrets.TFC_ORG }}
-      TFC_ENDPOINT: ${{ secrets.TFC_ENDPOINT }}
+      TFC_ENDPOINT: ${{ vars.TFC_ENDPOINT }}
     runs-on: [ubuntu-latest]
     steps:
       - name: Checkout
